# czbi_da_parez

./: .dockerignore  .gitignore  Dockerfile  README.md  convert_notebooks_to_py.py  print_watermark.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
_old/: __init__.py
_old/colab/: 00-quality_check.ipynb  02_feature_analysis_per-person_no-nuclei_extended-features.ipynb  02_feature_analysis_per-person_no-nuclei_extended-features.py
_old/package/: processing.py
_old/utilities/: ipynb_todo_check.py
colab/: 00-quality_check.py  01_x-channel-analysis_mask-extraction_extended-features-v2_better-names-20250327.py
czbi_da_parez/: __init__.py  analysis.py
czbi_da_parez.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
czbi_da_parez/analysis/: feature_analysis.py
czbi_da_parez/processing/: __init__.py  batch_processing.py  feature_summary.py  image_channel_analysis.py  membrane_analysis.py  quality.py
czbi_da_parez/utilities/: __init__.py  ipynb_helper.py  quality.py
docs/: conf.py  index.rst  modules.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/_sources/: modules.rst.txt
package/: feature_analysis.py  image_channel_analysis.py  quality.py
utilities/: ipynb_helper.py  ipynb_todo_check.py
