[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "czbi_da_parez"
version = "0.1.0"
description = "A Python package for data processing and analysis in channel and feature analysis."
authors = [
    { name = "Martin Schätz", email = "schatzm@natur.cuni.cz" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    #"opencv-python==4.11.0",
    #"opencv-python",
    "opencv-python-headless",
    "pandas==2.2.2",
    "numpy==1.24.4",
    "scipy==1.10.1",
    "scikit-image==0.20.0",
    "stardist",
    "tensorflow==2.18.0",
    "watermark",
    "umap-learn",
    "hdbscan",
    "seaborn",
    "scikit-learn",
    "nbformat",
    "nbconvert",
    "sphinx"
]
